# telco-churn-ml-pipeline

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/: .env.example  Dockerfile  README.md  docker-compose.yaml  requirements.txt  start-airflow.sh
airflow/dags/: ml_pipeline.py
configs/: __init__.py  prod.yml
data/processed/: old_cleaned_telco_customer_churn.csv
deployment/: .env.example  Dockerfile  README.md  requirements.txt
deployment/api/v1/: main.py
deployment/models/: telcom_customer.py
deployment/scripts/: setup.sh  startup.sh
deployment/services/: model_service.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  DISTRIBUTED_ARCHITECTURE.md  STRUCTURE.md
notebooks/: preprocessing.ipynb  train.ipynb
pipeline/: README.md  __init__.py  ingest.py  preprocess.py  train.py  update_config.py
tests/: test_api_endpoint.py  test_model.py  test_sample_prediction.py
utils/: logger.py
