[project]
name = "telco-churn-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "mlflow>=3.5.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.0",
]
